--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -276,7 +276,7 @@ numbers.map({it * it}).subscribe(
 9
 16
 25
-Sequence complete</pre></div></figcaption>
+Sequence complete</pre></div>
       <p>
        This operator does not by default operate on any particular <a href="../scheduler.html">Scheduler</a>.
       </p><ul>
