--- a/documentation/operators/merge.html
+++ b/documentation/operators/merge.html
@@ -793,8 +793,8 @@ Sequence complete.</pre></div>
       <figcaption><p>
        <code>merge</code> merges a second Observable into the one it is operating on to create a
        new merged Observable.
-      </p>
-     </figure></figcaption>
+      </p></figcaption>
+     </figure>
      <p>
       <code>merge_concurrent</code> operates on an Observable that emits Observables, merging the
       emissions from each of these Observables into its own emissions. You can optionally pass it
