--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="stream-arrow-head2"></div>
           <div class="stream-end"></div>
         </div>
-        <div class="operator">throttle
+        <div class="operator">debounce
           <div class="input-stream-mapper input-mapper1"></div>
           <div class="input-stream-mapper-head1 input-mapper1"></div>
           <div class="input-stream-mapper-head2 input-mapper1"></div>
