reflect changes to RxMarbles in our docs

--- a/documentation/operators/contains.html
+++ b/documentation/operators/contains.html
@@ -30,8 +30,8 @@ id: contains
    <ul>
     <li><a href="all.html"><span class="operator">All</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/06_Inspection.html#Contains"><cite>Introduction to Rx</cite>: Contains</a></li>
-    <li><a href="http://rxmarbles.com/#any">RxMarbles: <code>any</code></a></li>
     <li><a href="http://rxmarbles.com/#contains">RxMarbles: <code>contains</code></a></li>
+    <li><a href="http://rxmarbles.com/#some">RxMarbles: <code>some</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
