--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -33,6 +33,7 @@ id: combinelatest
     <li><a href="zip.html"><span class="operator">Zip</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/12_CombiningSequences.html#CombineLatest"><cite>Introduction to Rx</cite>: CombineLatest</a></li>
     <li><a href="http://rxmarbles.com/#combineLatest">RxMarbles: <code>combineLatest</code></a></li>
+    <li><a href="http://rxmarbles.com/#withLatestFrom">RxMarbles: <code>withLatestFrom</code></a></li>
     <li><a href="http://rxwiki.wikidot.com/101samples#toc3"><cite>101 Rx Samples</cite>: CombineLatest &mdash; Parallel Execution</a></li>
     <li><a href="http://rxwiki.wikidot.com/101samples#toc50"><cite>101 Rx Samples</cite>: CombineLatest</a></li>
    </ul>
