Add embedded RxMarbles for most operators in docs

--- a/documentation/operators/all.html
+++ b/documentation/operators/all.html
@@ -12,8 +12,8 @@ id: all
 
    <h1>All</h1>
    <h3>determine whether all items emitted by an Observable meet some criteria</h3>
-   <figure>
-    <img src="images/all.C.png" style="width:100%;" alt="All" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="every"></rx-marbles>
     <figcaption><p>
     Pass a predicate function to the <span class="operator">All</span> operator that accepts an item
     emitted by the source Observable and returns a boolean value based on an evaluation of that
