--- a/documentation/operators/amb.html
+++ b/documentation/operators/amb.html
@@ -12,8 +12,8 @@ id: amb
 
    <h1>Amb</h1>
    <h3>given two or more source Observables, emit all of the items from only the first of these Observables to emit an item or notification</h3>
-   <figure>
-    <img src="images/amb.C.png" style="width:100%;" alt="Amb" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="amb"></rx-marbles>
     <figcaption><p>
      When you pass a number of source Observables to <span class="operator">Amb</span>, it will pass through the
      emissions and notifications of exactly one of these Observables: the first one that sends a notification to
