--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -12,8 +12,8 @@ id: concat
 
    <h1>Concat</h1>
    <h3>emit the emissions from two or more Observables without interleaving them</h3>
-   <figure>
-    <img src="images/concat.C.png" style="width:100%;" alt="Concat" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="concat"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Concat</span> operator concatenates the output of multiple
      Observables so that they act like a single Observable, with all of the items emitted by the
