--- a/documentation/operators/contains.html
+++ b/documentation/operators/contains.html
@@ -12,8 +12,8 @@ id: contains
 
    <h1>Contains</h1>
    <h3>determine whether an Observable emits a particular item or not</h3>
-   <figure>
-    <img src="images/contains.C.png" style="width:100%;" alt="Contains" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="contains"></rx-marbles>
     <figcaption><p>
      Pass the <span class="operator">Contains</span> operator a particular item, and the Observable it returns
      will emit <code>true</code> if that item is emitted by the source Observable, or <code>false</code> if the
