--- a/documentation/operators/count.html
+++ b/documentation/operators/count.html
@@ -12,8 +12,8 @@ id: count
 
    <h1>Count</h1>
    <h3>count the number of items emitted by the source Observable and emit only this value</h3>
-   <figure>
-    <img src="images/Count.png" style="width:100%;" alt="Count" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="count"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Count</span> operator transforms an Observable that emits items into
      an Observable that emits a single value that represents the number of items emitted by the
