--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -13,8 +13,8 @@ id: debounce
    <h1>Debounce</h1>
    <h3>only emit an item from an Observable if a particular timespan has passed without it emitting another item</h3>
 
-   <figure>
-    <img src="images/debounce.c.png" style="width:100%;" alt="Debounce" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="debounce"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Debounce</span> operator filters out items emitted by the source Observable that
      are rapidly followed by another emitted item.
