--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -12,8 +12,8 @@ id: delay
 
    <h1>Delay</h1>
    <h3>shift the emissions from an Observable forward in time by a particular amount</h3>
-   <figure>
-    <img src="images/delay.c.png" style="width:100%;" alt="Delay" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="delay"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Delay</span> operator modifies its source Observable by pausing for a particular
      increment of time (that you specify) before emitting each of the source Observable&#8217;s items. This has
