--- a/documentation/operators/distinct.html
+++ b/documentation/operators/distinct.html
@@ -12,8 +12,8 @@ id: distinct
 
    <h1>Distinct</h1>
    <h3>suppress duplicate items emitted by an Observable</h3>
-   <figure>
-    <img src="images/distinct.c.png" style="width:100%;" alt="Distinct" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="distinct"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Distinct</span> operator filters an Observable by only allowing items through
      that have not already been emitted.
