--- a/documentation/operators/elementat.html
+++ b/documentation/operators/elementat.html
@@ -13,8 +13,8 @@ id: elementAt
    <h1>ElementAt</h1>
    <h3>emit only item <i>n</i> emitted by an Observable</h3>
 
-   <figure>
-    <img src="images/elementAt.c.png" style="width:100%;" alt="ElementAt" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="elementAt"></rx-marbles>
     <figcaption><p>
      The <code>ElementAt</code> operator pulls an item located at a specified index location in the sequence
      of items emitted by the source Observable and emits that item as its own sole emission.
