--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -12,8 +12,8 @@ id: filter
 
    <h1>Filter</h1>
    <h3>emit only those items from an Observable that pass a predicate test</h3>
-   <figure>
-    <img src="images/filter.c.png" style="width:100%;" alt="Filter" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="filter"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Filter</span> operator filters an Observable by only allowing items through
      that pass a test that you specify in the form of a predicate function.
