--- a/documentation/operators/first.html
+++ b/documentation/operators/first.html
@@ -12,8 +12,8 @@ id: first
 
    <h1>First</h1>
    <h3>emit only the first item (or the first item that meets some condition) emitted by an Observable</h3>
-   <figure>
-    <img src="images/first.c.png" style="width:100%;" alt="First" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="first"></rx-marbles>
     <figcaption><p>
     If you are only interested in the first item emitted by an Observable, or the first item that meets some
     criteria, you can filter the Observable with the <span class="operator">First</span> operator.
