--- a/documentation/operators/last.html
+++ b/documentation/operators/last.html
@@ -12,8 +12,8 @@ id: last
 
    <h1>Last</h1>
    <h3>emit only the last item (or the last item that meets some condition) emitted by an Observable</h3>
-   <figure>
-    <img src="images/last.c.png" style="width:100%;" alt="Last" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="last"></rx-marbles>
     <figcaption><p>
      If you are only interested in the last item emitted by an Observable, or the last item that meets some
      criteria, you can filter the Observable with the <span class="operator">Last</span> operator.
