--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -13,8 +13,8 @@ id: map
    <h1>Map</h1>
    <h3>transform the items emitted by an Observable by applying a function to each item</h3>
 
-   <figure>
-    <img src="images/map.c.png" style="width:100%;" alt="Map" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="map"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Map</span> operator applies a function of your choosing to each item
      emitted by the source Observable, and returns an Observable that emits the results of these
