--- a/documentation/operators/max.html
+++ b/documentation/operators/max.html
@@ -13,8 +13,8 @@ id: max
    <h1>Max</h1>
    <h3>emits the item from the source Observable that had the maximum value</h3>
 
-   <figure>
-    <img src="images/max.c.png" style="width:100%;" alt="Max" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="max"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Max</span> operator operates on an Observable that emits numbers
      (or items that can be evaluated as numbers), and emits a single item: the item with the largest
