--- a/documentation/operators/merge.html
+++ b/documentation/operators/merge.html
@@ -12,8 +12,8 @@ id: merge
 
    <h1>Merge</h1>
    <h3>combine multiple Observables into one by merging their emissions</h3>
-   <figure>
-    <img src="images/merge.C.png" style="width:100%;" alt="Merge" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="merge"></rx-marbles>
     <figcaption><p>
      You can combine the output of multiple Observables so that they act like a single Observable, by
      using the <span class="operator">Merge</span> operator.
