--- a/documentation/operators/min.html
+++ b/documentation/operators/min.html
@@ -13,8 +13,8 @@ id: min
    <h1>Min</h1>
    <h3>emits the item from the source Observable that had the minimum value</h3>
 
-   <figure>
-    <img src="images/min.c.png" style="width:100%;" alt="Min" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="min"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Min</span> operator operates on an Observable that emits numbers
      (or items that can be evaluated as numbers), and emits a single item: the item with the smallest
