--- a/documentation/operators/reduce.html
+++ b/documentation/operators/reduce.html
@@ -13,8 +13,8 @@ id: reduce
    <h1>Reduce</h1>
    <h3>apply a function to each item emitted by an Observable, sequentially, and emit the final value</h3>
 
-   <figure>
-    <img src="images/reduce.c.png" style="width:100%;" alt="Reduce" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="reduce"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Reduce</span> operator applies a function to the first item emitted by the
      source Observable and then feeds the result of the function back into the function along with the second
