--- a/documentation/operators/sample.html
+++ b/documentation/operators/sample.html
@@ -12,8 +12,8 @@ id: sample
 
    <h1>Sample</h1>
    <h3>emit the most recent items emitted by an Observable within periodic time intervals</h3>
-   <figure>
-    <img src="images/sample.c.png" style="width:100%;" alt="Sample" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="sample"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Sample</span> operator periodically looks at an Observable and emits whichever
      item it has most recently emitted since the previous sampling.
