--- a/documentation/operators/scan.html
+++ b/documentation/operators/scan.html
@@ -13,8 +13,8 @@ id: scan
    <h1>Scan</h1>
    <h3>apply a function to each item emitted by an Observable, sequentially, and emit each successive value</h3>
 
-   <figure>
-    <img src="images/scan.c.png" style="width:100%;" alt="Scan" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="scan"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Scan</span> operator applies a function to the first item emitted
      by the source Observable and then emits the result of that function as its own first emission.
