--- a/documentation/operators/skip.html
+++ b/documentation/operators/skip.html
@@ -13,8 +13,8 @@ id: skip
    <h1>Skip</h1>
    <h3>suppress the first <i>n</i> items emitted by an Observable</h3>
 
-   <figure>
-    <img src="images/skip.c.png" style="width:100%;" alt="Skip" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="skip"></rx-marbles>
     <figcaption><p>
      You can ignore the first <i>n</i> items emitted by an Observable and attend only to those items that come
      after, by modifying the Observable with the <span class="operator">Skip</span> operator.
