--- a/documentation/operators/skiplast.html
+++ b/documentation/operators/skiplast.html
@@ -13,8 +13,8 @@ id: skipLast
    <h1>SkipLast</h1>
    <h3>suppress the final <i>n</i> items emitted by an Observable</h3>
 
-   <figure>
-    <img src="images/skipLast.c.png" style="width:100%;" alt="SkipLast" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="skipLast"></rx-marbles>
     <figcaption><p>
      You can ignore the final <i>n</i> items emitted by an Observable and attend only to those items that come
      before them, by modifying the Observable with the <span class="operator">SkipLast</span> operator.
