--- a/documentation/operators/skipuntil.html
+++ b/documentation/operators/skipuntil.html
@@ -13,8 +13,8 @@ id: skipUntil
    <h1>SkipUntil</h1>
    <h3>discard items emitted by an Observable until a second Observable emits an item</h3>
 
-   <figure>
-    <img src="images/skipUntil.c.png" style="width:100%;" alt="SkipUntil" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="skipUntil"></rx-marbles>
     <figcaption><p>
      The <span class="operator">SkipUntil</span> subscribes to the source Observable, but ignores its emissions
      until such time as a second Observable emits an item, at which point
