--- a/documentation/operators/startwith.html
+++ b/documentation/operators/startwith.html
@@ -12,8 +12,8 @@ id: startwith
 
    <h1>StartWith</h1>
    <h3>emit a specified sequence of items before beginning to emit the items from the source Observable</h3>
-   <figure>
-    <img src="images/startWith.C.png" style="width:100%;" alt="StartWith" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="startWith"></rx-marbles>
     <figcaption><p>
      If you want an Observable to emit a specific sequence of items before it begins emitting the
      items normally expected from it, apply the <span class="operator">StartWith</span> operator to it.
