--- a/documentation/operators/sum.html
+++ b/documentation/operators/sum.html
@@ -13,8 +13,8 @@ id: sum
    <h1>Sum</h1>
    <h3>calculates the sum of numbers emitted by an Observable and emits this sum</h3>
 
-   <figure>
-    <img src="images/sum.c.png" style="width:100%;" alt="Sum" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="sum"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Sum</span> operator operates on an Observable that emits numbers
      (or items that can be evaluated as numbers), and emits a single value: the sum of all of the
