--- a/documentation/operators/take.html
+++ b/documentation/operators/take.html
@@ -13,8 +13,8 @@ id: take
    <h1>Take</h1>
    <h3>emit only the first <i>n</i> items emitted by an Observable</h3>
 
-   <figure>
-    <img src="images/take.c.png" style="width:100%;" alt="Take" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="take"></rx-marbles>
     <figcaption><p>
      You can emit only the first <i>n</i> items emitted by an Observable and then complete while ignoring the
      remainder, by modifying the Observable with the <span class="operator">Take</span> operator.
