--- a/documentation/operators/takelast.html
+++ b/documentation/operators/takelast.html
@@ -13,8 +13,8 @@ id: takeLast
    <h1>TakeLast</h1>
    <h3>emit only the final <i>n</i> items emitted by an Observable</h3>
 
-   <figure>
-    <img src="images/takeLast.c.png" style="width:100%;" alt="TakeLast" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="takeLast"></rx-marbles>
     <figcaption><p>
      You can emit only the final <i>n</i> items emitted by an Observable and ignore those items that come
      before them, by modifying the Observable with the <span class="operator">TakeLast</span> operator.
