--- a/documentation/operators/takeuntil.html
+++ b/documentation/operators/takeuntil.html
@@ -13,8 +13,8 @@ id: takeUntil
    <h1>TakeUntil</h1>
    <h3>discard any items emitted by an Observable after a second Observable emits an item or terminates</h3>
 
-   <figure>
-    <img src="images/takeUntil.c.png" style="width:100%;" alt="TakeUntil" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="takeUntil"></rx-marbles>
     <figcaption><p>
      The <span class="operator">TakeUntil</span> subscribes and begins mirroring the source Observable. It also
      monitors a second Observable that you provide. If this second Observable emits an item or sends a
