--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -12,8 +12,9 @@ id: zip
 
    <h1>Zip</h1>
    <h3>combine the emissions of multiple Observables together via a specified function and emit single items for each combination based on the results of this function</h3>
-   <figure>
-    <img src="images/zip.c.png" style="width:100%;" alt="Zip" />
+
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="zip"></rx-marbles>
     <figcaption><p>
      The <code>Zip</code> method returns an Observable that applies a function of your choosing to
      the combination of items emitted, in sequence, by two (or more) other Observables, with the
