--- a/documentation/operators/average.html
+++ b/documentation/operators/average.html
@@ -12,8 +12,8 @@ id: average
 
    <h1>Average</h1>
    <h3>calculates the average of numbers emitted by an Observable and emits this average</h3>
-   <figure>
-    <img src="images/average.c.png" style="width:100%;" alt="Average" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="average"></rx-marbles>
     <figcaption><p>
      The <span class="operator">Average</span> operator operates on an Observable that emits numbers
      (or items that can be evaluated as numbers), and emits a single value: the average of all of
