--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -13,8 +13,8 @@ id: combinelatest
    <h1>CombineLatest</h1>
    <h3>when an item is emitted by either of two Observables, combine the latest item emitted by each Observable via a specified function and emit items based on the results of this function</h3>
 
-   <figure>
-    <img src="images/combineLatest.c.png" style="width:100%;" alt="CombineLatest" />
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="combineLatest"></rx-marbles>
     <figcaption><p>
      The <span class="operator">CombineLatest</span> operator behaves in a similar way to
      <span class="operator">Zip</span>, but while <span class="operator">Zip</span> emits items only
