broken link in map.html

--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -24,7 +24,7 @@ id: map
 
    <h4>See Also</h4>
    <ul>
-    <li><a href="flatmap"><span class="operator">FlatMap</span></a></li>
+    <li><a href="flatmap.html"><span class="operator">FlatMap</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/08_Transformation.html#Select"><cite>Introduction to Rx</cite>: Select</a></li>
     <li><a href="http://rxmarbles.com/#map">RxMarbles: <code>map</code></a></li>
     <li><a href="http://rxwiki.wikidot.com/101samples#toc22"><cite>101 Rx Samples</cite>: Select &mdash; Indexed</a></li>
