--- a/documentation/operators/amb.html
+++ b/documentation/operators/amb.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ReactiveX - Amb operator</title>
 
-    <!-- Polymer -->
-    <script src="/polymer/components/platform/platform.js"></script>
 
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
@@ -25,55 +23,10 @@
     <!-- syntax highlighting CSS -->
     <link rel="stylesheet" href="/css/syntax.css" />
 
-    <style shim-shadowdom>
-        /* This is overriding our styles for body, and it shouldn't.
-        body {
-          font-family: RobotoDraft, 'Helvetica Neue', Helvetica, Arial;
-          color: #333;
-          -webkit-user-select: none;
-          -moz-user-select: none;
-          -ms-user-select: none;
-          user-select: none;
-          -webkit-tap-highlight-color: rgba(0,0,0,0);
-          -webkit-touch-callout: none;
-        }
-        */
+    <!-- Embeddable RxMarbles -->
+    <script defer src="/js/CustomElements.min.js"></script>
+    <script defer src="/js/rx-marbles.js"></script>
 
-        paper-tabs, core-toolbar {
-          background-color: #00bcd4;
-          color: #fff;
-          box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.2);
-        }
-
-        core-toolbar paper-tabs {
-          box-shadow: none;
-        }
-
-        paper-tabs[noink][nobar] paper-tab.core-selected {
-          color: #ffff8d;
-        }
-
-        paper-tabs.transparent-teal {
-          background-color: transparent;
-          color: #00bcd4;
-          box-shadow: none;
-        }
-
-        paper-tabs.transparent-teal::shadow #selectionBar {
-          background-color: #00bcd4;
-        }
-
-        paper-tabs.transparent-teal paper-tab::shadow #ink {
-          color: #00bcd4;
-        }
-
-        /* This is overriding our custom styles, and it shouldn't.
-        h3 {
-          font-size: 16px;
-          font-weight: 400;
-        }
-        */
-    </style>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -179,17 +132,15 @@
 </ol>
 
    <h1>Amb</h1>
-   <h3>given two or more source Observables, emit all of the items from only the first of these Observables to emit an item</h3>
-   <figure>
-    <img src="images/amb.C.png" style="width:100%;" alt="Amb" />
-   <figcaption><p>
-    When you pass a number of source Observables to <span class="operator">Amb</span>, it will pass
-    through the emissions and notifications of exactly one of these Observables: the first one that
-    emits an item to <span class="operator">Amb</span>. It will ignore and discard the emissions of
-    all of the other source Observables.
-    </p><p>
-    If <em>all</em> of the source Observables complete without emitting an item, the Observable
-    returned from <span class="operator">Amb</span> will also complete normally without emitting anything.
+   <h3>given two or more source Observables, emit all of the items from only the first of these Observables to emit an item or notification</h3>
+   <figure class="rxmarbles-figure">
+    <rx-marbles key="amb"></rx-marbles>
+    <figcaption><p>
+     When you pass a number of source Observables to <span class="operator">Amb</span>, it will pass through the
+     emissions and notifications of exactly one of these Observables: the first one that sends a notification to
+     <span class="operator">Amb</span>, either by emitting an item or sending an <code>onError</code> or
+     <code>onCompleted</code> notification. <span class="operator">Amb</span> will ignore and discard the
+     emissions and notifications of all of the other source Observables.
     </p></figcaption>
    </figure>
    <h4>See Also</h4>
